--- a/src/app/components/AppContainer.scss
+++ b/src/app/components/AppContainer.scss
@@ -1,5 +1,9 @@
 
 .app-container-component {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    
     .app-input-container {
         display: flex;
         border-bottom: 1px solid #1c1c1c;
@@ -19,6 +23,10 @@
     }
     
     .app-result-container {
-        
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
