--- a/src/app/components/ResultDisplayContainer.scss
+++ b/src/app/components/ResultDisplayContainer.scss
@@ -1,4 +1,28 @@
 
 .result-display-container-component {
     padding: 2em;
+    width: 100%;
+    height: 100%;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    
+    .result-display-result {
+        width: 100%;
+        height: 100%;
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .result-display-start-container {
+        
+    }
+    
+    .result-display-button-container {
+        text-align: center;
+    }
 }
