--- a/src/app/components/common/Input.scss
+++ b/src/app/components/common/Input.scss
@@ -4,7 +4,8 @@
     width: 100%;
     box-sizing: border-box;
     padding: 0.4em 0.8em;
-    transition: box-shadow 0.2s ease-out;
+    transition: box-shadow 0.2s ease-out,
+        border-color 0.2s ease-out;
     border-radius: 0.2em;
     border: 1px solid #535353;
     color: white;
@@ -14,5 +15,9 @@
     
     &:active, &:focus {
         box-shadow: 0 0 0.3em 0.1em #7ca5f390;
+    }
+    
+    &.input-error {
+        border-color: #d22525;
     }
 }
