Add support for multiple tables

--- a/src/app/components/AppContainer.scss
+++ b/src/app/components/AppContainer.scss
@@ -11,14 +11,14 @@
     }
     
     .app-probability-input-container {
-        flex-grow: 1;
-        flex-basis: 0;
+        flex-grow: 0;
+        width: 50%;
         background-color: lighten($color: #1f1f23, $amount: 5%);
     }
     
     .app-goal-input-container {
-        flex-grow: 1;
-        flex-basis: 0;
+        flex-grow: 0;
+        width: 50%;
         background-color: lighten($color: #1f1f23, $amount: 3%);
     }
     
