--- a/src/app/components/common/Tabs.scss
+++ b/src/app/components/common/Tabs.scss
@@ -85,4 +85,8 @@
         border-radius: 0.4em;
         box-shadow: inset 0 0 1em 0.1em #00000080;
     }
+    
+    .tab-content-hidden {
+        display: none;
+    }
 }
