--- a/src/app/components/result-displays/CalculationResultDisplay.scss
+++ b/src/app/components/result-displays/CalculationResultDisplay.scss
@@ -12,4 +12,10 @@
         flex-basis: 0;
         flex-grow: 1;
     }
+    
+    .progress-content-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
