--- a/src/app/components/result-displays/SimulationResultDisplay.scss
+++ b/src/app/components/result-displays/SimulationResultDisplay.scss
@@ -28,4 +28,10 @@
         right: 1em;
         font-size: 0.6em;
     }
+    
+    .unknowns-content-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
