Add option to enter simulation rounds

--- a/src/app/components/common/Input.scss
+++ b/src/app/components/common/Input.scss
@@ -12,6 +12,7 @@
     background-color: #434346;
     height: 2.2em;
     font-size: inherit;
+    display: block;
     
     &:active, &:focus {
         box-shadow: 0 0 0.3em 0.1em #7ca5f390;
